# netology_feml

./: DQ.ipynb  Intro_to_NN_3__hw_ (1) copy.ipynb  LogAndSVC.ipynb  Metrics.ipynb  MyLogReg.ipynb  Vars.ipynb  pyproject.toml
