[tool.poetry]
name = "netology-feml"
version = "0.1.0"
description = ""
authors = ["Alexey Yakimanskiy <yakimanskiyav@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
duckdb = "^1.0.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
